[gd_scene load_steps=2 format=3 uid="uid://ai_config_panel_001"]

[ext_resource type="Script" path="res://scripts/ai_config_panel.gd" id="1"]

[node name="AIConfigPanel" type="Panel"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -250.0
offset_right = 300.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TitleContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer/TitleContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "AI 配置"
horizontal_alignment = 1

[node name="CloseButton" type="Button" parent="MarginContainer/VBoxContainer/TitleContainer"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
text = "×"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TabContainer" type="TabContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="快速配置" type="MarginContainer" parent="MarginContainer/VBoxContainer/TabContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/快速配置"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="HintLabel" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/快速配置/VBoxContainer"]
layout_mode = 2
text = "填入硅基流动的API密钥"
horizontal_alignment = 1

[node name="KeyLabel" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/快速配置/VBoxContainer"]
layout_mode = 2
text = "API密钥:"

[node name="KeyInput" type="LineEdit" parent="MarginContainer/VBoxContainer/TabContainer/快速配置/VBoxContainer"]
layout_mode = 2
placeholder_text = "sk-..."
secret = true

[node name="SaveButton" type="Button" parent="MarginContainer/VBoxContainer/TabContainer/快速配置/VBoxContainer"]
layout_mode = 2
text = "保存配置"

[node name="StatusLabel" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/快速配置/VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1

[node name="详细配置" type="MarginContainer" parent="MarginContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/TabContainer/详细配置"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/详细配置/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 15

[node name="WarningLabel" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/详细配置/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "注意：由于协议不同，部分平台可能无法正常使用"
horizontal_alignment = 1
autowrap_mode = 3

[node name="HSeparator1" type="HSeparator" parent="MarginContainer/VBoxContainer/TabContainer/详细配置/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="ChatModelLabel" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/详细配置/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "对话模型配置"
horizontal_alignment = 1

[node name="ChatModelName" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/详细配置/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "模型名称:"

[node name="ChatModelInput" type="LineEdit" parent="MarginContainer/VBoxContainer/TabContainer/详细配置/ScrollContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "deepseek-ai/DeepSeek-V3.2-Exp"

[node name="ChatBaseURLLabel" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/详细配置/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Base URL:"

[node name="ChatBaseURLInput" type="LineEdit" parent="MarginContainer/VBoxContainer/TabContainer/详细配置/ScrollContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "https://api.siliconflow.cn/v1"

[node name="ChatKeyLabel" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/详细配置/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "API 密钥:"

[node name="ChatKeyInput" type="LineEdit" parent="MarginContainer/VBoxContainer/TabContainer/详细配置/ScrollContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "sk-..."
secret = true

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer/TabContainer/详细配置/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="SummaryModelLabel" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/详细配置/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "总结模型配置"
horizontal_alignment = 1

[node name="SummaryModelName" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/详细配置/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "模型名称:"

[node name="SummaryModelInput" type="LineEdit" parent="MarginContainer/VBoxContainer/TabContainer/详细配置/ScrollContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Qwen/Qwen3-8B"

[node name="SummaryBaseURLLabel" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/详细配置/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Base URL:"

[node name="SummaryBaseURLInput" type="LineEdit" parent="MarginContainer/VBoxContainer/TabContainer/详细配置/ScrollContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "https://api.siliconflow.cn/v1"

[node name="SummaryKeyLabel" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/详细配置/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "API 密钥:"

[node name="SummaryKeyInput" type="LineEdit" parent="MarginContainer/VBoxContainer/TabContainer/详细配置/ScrollContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "sk-..."
secret = true

[node name="HSeparator3" type="HSeparator" parent="MarginContainer/VBoxContainer/TabContainer/详细配置/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="TTSModelLabel" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/详细配置/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "TTS模型配置"
horizontal_alignment = 1

[node name="TTSModelName" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/详细配置/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "模型名称:"

[node name="TTSModelInput" type="LineEdit" parent="MarginContainer/VBoxContainer/TabContainer/详细配置/ScrollContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "FunAudioLLM/CosyVoice2-0.5B"

[node name="TTSBaseURLLabel" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/详细配置/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Base URL:"

[node name="TTSBaseURLInput" type="LineEdit" parent="MarginContainer/VBoxContainer/TabContainer/详细配置/ScrollContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "https://api.siliconflow.cn"

[node name="TTSKeyLabel" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/详细配置/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "API 密钥:"

[node name="TTSKeyInput" type="LineEdit" parent="MarginContainer/VBoxContainer/TabContainer/详细配置/ScrollContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "sk-..."
secret = true

[node name="HSeparator4" type="HSeparator" parent="MarginContainer/VBoxContainer/TabContainer/详细配置/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="DetailSaveButton" type="Button" parent="MarginContainer/VBoxContainer/TabContainer/详细配置/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "保存详细配置"

[node name="DetailStatusLabel" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/详细配置/ScrollContainer/VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1

[node name="声音设置" type="MarginContainer" parent="MarginContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/声音设置"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="EnableContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/声音设置/VBoxContainer"]
layout_mode = 2

[node name="EnableLabel" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/声音设置/VBoxContainer/EnableContainer"]
layout_mode = 2
text = "启用语音合成"

[node name="EnableCheckBox" type="CheckBox" parent="MarginContainer/VBoxContainer/TabContainer/声音设置/VBoxContainer/EnableContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 2

[node name="VolumeContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/声音设置/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="VolumeLabel" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/声音设置/VBoxContainer/VolumeContainer"]
layout_mode = 2
text = "音量"

[node name="VolumeSlider" type="HSlider" parent="MarginContainer/VBoxContainer/TabContainer/声音设置/VBoxContainer/VolumeContainer"]
layout_mode = 2
min_value = 0.0
max_value = 1.0
step = 0.01
value = 0.8

[node name="VolumeValueLabel" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/声音设置/VBoxContainer/VolumeContainer"]
layout_mode = 2
text = "80%"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer/TabContainer/声音设置/VBoxContainer"]
layout_mode = 2

[node name="StatusLabel" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/声音设置/VBoxContainer"]
layout_mode = 2
text = ""
horizontal_alignment = 1

[node name="HintLabel" type="Label" parent="MarginContainer/VBoxContainer/TabContainer/声音设置/VBoxContainer"]
layout_mode = 2
text = "提示：TTS比较贵，不用的话建议关闭"
horizontal_alignment = 1
autowrap_mode = 3
